<resources>
    <string name="app_name">Act1_ConstraintLayout</string>
    <string name="judul">Login Page</string>
    <string name="login">Login</string>
    <string name="mail">E-Mail</string>
    <string name="pass">Password</string>
    <string name="btnLogin">Sign Up</string>
    <string name="judul2">Status Login</string>
    <string name="dataView">Data Anda</string>
    <string name="dataMail">Email Anda</string>
    <string name="dataPass">Password Anda</string>
    <string name="pDaftar">Pendaftaran</string>
    <string name="bDaftar">Daftar</string>
    <string name="iNama">Masukkan Nama</string>
    <string name="iMail">Masukkan Email</string>
    <string name="iPass">Masukkan Password</string>
    <string name="iRPass">Masukkan Password Kembali</string>
    <string name="iAlamat">Masukkan Alamat</string>
    <string name="lihatData">Lihat Data</string>
    <string name="editData">Edit Data</string>
    <string name="dataKontak">Data Kontak</string>
    <string name="namaItem">Nama Item</string>
    <string name="detailKontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="noTel">Nomor Telepon</string>
</resources>
