<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewHasil"
        android:layout_width="192dp"
        android:layout_height="49dp"
        android:text="@string/dataView"
        android:textSize="14pt"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089" />

    <TextView
        android:id="@+id/textEmailView"
        android:layout_width="95dp"
        android:layout_height="37dp"
        android:text="@string/mail"
        android:textSize="10pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHasil"
        app:layout_constraintVertical_bias="0.082" />

    <TextView
        android:id="@+id/textPassView"
        android:layout_width="113dp"
        android:layout_height="37dp"
        android:text="@string/pass"
        android:textSize="10pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmailView"
        app:layout_constraintVertical_bias="0.052" />

    <TextView
        android:id="@+id/textResEmail"
        android:layout_width="202dp"
        android:layout_height="43dp"
        android:text="@string/dataMail"
        android:textSize="10pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toEndOf="@+id/textEmailView"
        app:layout_constraintTop_toBottomOf="@+id/textViewHasil"
        app:layout_constraintVertical_bias="0.082" />

    <TextView
        android:id="@+id/textResPass"
        android:layout_width="202dp"
        android:layout_height="43dp"
        android:text="@string/dataPass"
        android:textSize="10pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toEndOf="@+id/textEmailView"
        app:layout_constraintTop_toBottomOf="@+id/textResEmail"
        app:layout_constraintVertical_bias="0.043" />
</androidx.constraintlayout.widget.ConstraintLayout>